Nested test class for prepared keystore.